# objc-compat

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  objc-compat.sublime-project  package.json
.github/workflows/: semgrep.yml
.mulle-env/etc/: environment-host-walitza.sh
.mulle-env/share/: environment-project.sh
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-project.sh  tool
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-plugin.sh  environment.sh
.mulle/share/sourcetree/: config
cmake/: Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake
cmake/share/: CreateLoaderIncObjC.cmake  Environment.cmake  FallbackEnvironment.cmake  StandaloneC.cmake  StartupC.cmake
cola/: api.md.bud  description.md.bud  properties.plist  usage.md.bud
src/: _objc-compat-import-private.h  _objc-compat-import.h  _objc-compat-include-private.h  _objc-compat-include.h  apple-alloca-glue.h  apple-isa-glue.h  apple-message-glue.h  apple-object-glue.h  apple-vararg-glue.h  import-private.h  import.h  include-private.h  include.h  mulle-alloca-glue.h  mulle-compiler-glue.h  mulle-isa-glue.h  mulle-message-glue.h  mulle-object-glue.h  mulle-vararg-glue.h  objc-compat.h
src/generic/: import-private.h  import.h
test/: README.md  import.h  include.h
test/10-message/: bool-return.m  objc_msgSend3.m  objc_msgSend3.stdout
(+7 files in other folders)
